# wlog

./: .gitignore  Cargo.toml  diesel.toml
.github/workflows/: test.yml
migrations/2024-12-20-110210_initial/: down.sql  up.sql
migrations/2024-12-23-001707_remove_task_description/: down.sql  up.sql
migrations/2024-12-26-212252_add_schedule/: down.sql  up.sql
migrations/2026-03-29-091732-0000_add_comments/: up.sql
src/: comments.rs  config.rs  data.rs  log_entries.rs  main.rs  projects.rs  schedule.rs  schema.rs  tasks.rs  utils.rs
src/cli/: comments.rs  common.rs  config.rs  logs.rs  mod.rs  projects.rs  tasks.rs
