[package]
name = "wlog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
arboard = "3.4.1"
clap = { version = "4.5.23", features = ["derive"] }
comfy-table = "7.1.3"
console = "0.15.10"
diesel = { version = "2.2.6", features = ["sqlite", "time", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "5.0.1"
owo-colors = "4.1.0"
serde = "1.0.216"
time = { version = "0.3.37", features = ["local-offset", "serde"] }
toml = "0.8.19"
